force-app/main/default/objects/EquipmentAdministration__c/EquipmentAdministration__c.object-meta.xml
<CustomObject>
    <label>Amministrazione Dotazioni</label>
    <nameField>
        <displayFormat>AMD-{0000000}</displayFormat>
        <label>Amministrazione Dotazioni Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Amministrazione Dotazioni</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>