force-app/main/default/objects/EquipmentAdministration__c/fields/DeliveryMode__c.field-meta.xml
<CustomField>
    <fullName>DeliveryMode__c</fullName>
    <label>Modalità Consegna</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Domicilio</fullName>
            </value>
            <value>
                <fullName>CDR/Uniflotte</fullName>
                <label>Punti distribuzioni/Uniflotte</label>
            </value>
            <value>
                <fullName>Sportello</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>