force-app/main/default/objects/EquipmentAdministration__c/fields/IsQuadruplet__c.field-meta.xml
<CustomField>
    <fullName>IsQuadruplet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quadrupletta</label>
    <type>Checkbox</type>
</CustomField>