force-app/main/default/objects/EquipmentAdministration__c/fields/OperationType__c.field-meta.xml
<CustomField>
    <fullName>OperationType__c</fullName>
    <label>Tipo Intervento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_OperationType</valueSetName>
    </valueSet>
</CustomField>